# Payment-System-RR

./: .env  README.md  pyproject.toml
orgs/: admin.py  apps.py  models.py  selectors.py  urls.py  views.py
orgs/migrations/: 0001_initial.py  0002_alter_organization_inn_organization_inn_length.py
payment_system/: settings.py  urls.py
payments/: admin.py  models.py  services.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_payment_positive_amount.py
