[tool.poetry]
name = "payment-system"
version = "0.1.0"
description = "Test assignment for the role of Python Developer in Rabochie Ruki"
authors = ["Daniil Lemeshko <gafret_kelp@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.22"
django = "4.2.17"
python-dotenv = "^1.1.0"
mysqlclient = "^2.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
